Mudança no cabeçalho #eee - Logos

--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ Free Responsive Html5 Templates : http://www.zerotheme.com
 /* ---------------------------------------------------------------------------- */
 /* ------------------------------------Html-Body------------------------------- */
 /* ---------------------------------------------------------------------------- */
-body {font-family: "Raleway",sans-serif;color: #666;background-color: #fff;font-size: 16px;line-height: 1.6em;font-weight: 400;}
+body {font-family: "Raleway",sans-serif;color: #666;background-color: #eee;font-size: 16px;line-height: 1.6em;font-weight: 400;}
 html, body {width:100%; padding:0; margin:0;}
 
 /* ---------------------------------------------------------------------------- */
@@ -74,7 +74,7 @@ input:not([type]), input[type="color"], input[type="email"], input[type="number"
 /* ---------------------------------------------------------------------------- */
 /* ---------------------------------Header+Nav--------------------------------- */
 /* ---------------------------------------------------------------------------- */
-nav.navbar-default{background: #fff;border: none;}
+nav.navbar-default{background: #eee;border: none;}
 nav.navbar-default li a{border-radius: 30px;padding: 15px 24px;font-weight: bold;}
 nav.navbar-default li a:hover{background: #41BE9F !important;color: #fff !important;}
 .navbar-static-top .nav {padding: 25px 0;}
